apps/whoami/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/component: deployment
    app.kubernetes.io/name: whoami
    app.kubernetes.io/part-of: whoami
  name: whoami
spec:
  replicas: 2
  revisionHistoryLimit: 0
  selector:
    matchLabels:
      app.kubernetes.io/component: pod
      app.kubernetes.io/name: whoami
      app.kubernetes.io/part-of: whoami
  template:
    metadata:
      labels:
        app.kubernetes.io/component: pod
        app.kubernetes.io/name: whoami
        app.kubernetes.io/part-of: whoami
    spec:
      automountServiceAccountToken: false
      containers:
      - args:
        # - --cacert
        # - /certs/ca.crt
        # - --cert
        # - /certs/tls.crt
        # - --key
        # - /certs/tls.key
        - --verbose
        image: traefik/whoami:v1.12.0
        imagePullPolicy: IfNotPresent
        # livenessProbe:
        #   httpGet:
        #     path: /health
        #     port: 8080
        #     scheme: HTTPS
        #   initialDelaySeconds: 5
        #   periodSeconds: 10
        name: whoami
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP
        # readinessProbe:
        #   httpGet:
        #     path: /health
        #     port: 8080
        #     scheme: HTTPS
        #   initialDelaySeconds: 5
        #   periodSeconds: 10
        #   failureThreshold: 20
        resources:
          limits:
            cpu: 10m
            memory: 16Mi
          requests:
            cpu: 10m
            memory: 8Mi
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
          readOnlyRootFilesystem: false
        # volumeMounts:
        # - mountPath: /certs
        #   name: whoami-cert
        #   readOnly: true
      nodeSelector:
        kubernetes.io/os: linux
      securityContext:
        fsGroup: 999
      # volumes:
      # - name: whoami-cert
      #   secret:
      #     defaultMode: 440
      #     secretName: whoami-cert
